Add Vector API demo